<resources>
    <string name="app_name" id="@+id/chatName">ChatApp</string>
    <string name="usersFragTtl">All users</string>
    <string name="password_updater_title">Enter email for change password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="name_updater_title">Enter your name</string>
    <string name="email_updater_title">Enter your email</string>
    <string name="title_activity_chat_with_user">ChatWithUserActivity</string>
    <string name="settingsMessageAboutBug">salary.app.service@gmail.com:\n Business  email.\nYou can send report about bugs or ideas for improve app. Thank. </string>


    <string name="settingsChooseTheme">Blue theme</string>
    <string name="frag_login_title">Authorization</string>
    <string name="frag_login_enter_email">Enter your email</string>
    <string name="frag_login_enter_password">Enter your password</string>
    <string name="frag_login_reset_password">Reset password</string>
    <string name="frag_login_swipe_right_for_register">Swipe right for register</string>
    <string name="frag_login_btn_cancel">Cancel</string>
    <string name="frag_login_btn_confirm">Confirm</string>
    <string name="frag_reg_title">Register</string>
    <string name="frag_reg_enter_name">Enter your name</string>
    <string name="frag_reg_enter_email">Enter your email</string>
    <string name="frag_reg_enter_password">Enter your password</string>
    <string name="frag_reg_confirm_password">Confirm your password</string>
    <string name="frag_reg_btn_cancel">Cancel</string>
    <string name="frag_reg_btn_confirm">Confirm</string>


    <!--Toasts-->
    <string name="toast_reg_email_exist">Current email already exist</string>
    <string name="toast_reg_not_same_passwords">Passwords should be same</string>
    <string name="toast_reg_empty_field">One of fields is empty</string>
    <string name="toast_reg_welcome_to_chat">\" welcome to chat\"</string>
    <string name="toast_reg_user_exist">User with current email exist in database</string>
    <string name="toast_login_required_fields">Fields are required</string>
    <string name="shared_pref_night_mode">NightMode</string>
    <string name="profile_hint_change_data_above">Click on text above for change it.</string>
    <string name="profile_tv_email">Email</string>
    <string name="profile_tv_name">Name</string>
    <string name="profile_tv_pass">Password</string>
    <string name="profile_change_pass">Click here to change</string>
    <string name="shared_pref_notification_name">notification</string>
    <string name="shared_pref_notification_value">runNotification</string>
</resources>
