<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTVTtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/standard_margin"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/frag_login_title"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size" />


    <EditText
        android:id="@+id/loginETLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginETPass"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:hint="@string/frag_login_enter_email"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#60FFFFFF" />

    <EditText
        android:id="@+id/loginETPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:hint="@string/frag_login_enter_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#60FFFFFF" />

    <TextView
        android:id="@+id/loginTVResetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginETPass"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/frag_login_reset_password"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/frag_login_swipe_right_for_register"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/login_Btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/frag_login_btn_cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/loginBtnConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/frag_login_btn_confirm"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>