<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameUpTtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_updater_title"
        android:textSize="@dimen/ttlTextSize"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/standard_margin"/>

    <EditText
        android:id="@+id/nameUpET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your name"
        android:layout_below="@+id/nameUpTtl"
        android:textAlignment="center"
        android:layout_margin="@dimen/standard_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_below="@+id/nameUpET">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/nameUpBtnConfirm"
            android:text="@string/confirm"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/nameUpBtnCancel"
            android:text="@string/cancel"/>
    </LinearLayout>


</RelativeLayout>