<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/passUpTtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_updater_title"
        android:textSize="@dimen/ttlTextSize"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/standard_margin"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/passUpETEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your email"
        android:layout_below="@+id/passUpTtl"
        android:textAlignment="center"
        android:layout_margin="@dimen/standard_margin"
        android:inputType="textEmailAddress"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_below="@+id/passUpETEmail">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/passUpBtnConfirm"
            android:text="@string/confirm"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/passUpBtnCancel"
            android:text="@string/cancel"/>
    </LinearLayout>


</RelativeLayout>