<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/emailUpTtl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_updater_title"
        android:textSize="@dimen/ttlTextSize"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/standard_margin"/>

    <EditText
        android:id="@+id/emailUpET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your email"
        android:layout_below="@+id/emailUpTtl"
        android:gravity="center"
        android:layout_margin="@dimen/standard_margin"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/emailUpPassConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your password for change email"
        android:layout_below="@+id/emailUpET"
        android:gravity="center"
        android:layout_margin="@dimen/standard_margin"
        android:inputType="textPassword"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_below="@+id/emailUpPassConfirm">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/emailUpBtnConfirm"
            android:text="@string/confirm"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/emailUpBtnCancel"
            android:text="@string/cancel"/>
    </LinearLayout>


</RelativeLayout>